[package]
name = "rlp_decode"
version = "0.1.0"
edition = "2024"

[dependencies]
## revm
revm = { version = "19.4.0", default-features = false }
revm-primitives = { version = "15.1.0", default-features = false }
revm-inspectors = { version = "0.15.0", features = ["serde"] }

## alloy
alloy-consensus = { version = "0.11.1", default-features = false }
alloy-contract = { version = "0.11.1", default-features = false }
alloy-eips = { version = "0.11.1", default-features = false }
alloy-genesis = { version = "0.11.1", default-features = false }
alloy-json-rpc = { version = "0.11.1", default-features = false }
alloy-network = { version = "0.11.1", default-features = false }
alloy-provider = { version = "0.11.1", default-features = false }
alloy-pubsub = { version = "0.11.1", default-features = false }
alloy-rpc-client = { version = "0.11.1", default-features = false }
alloy-rpc-types = { version = "0.11.1", default-features = true }
alloy-serde = { version = "0.11.1", default-features = false }
alloy-signer = { version = "0.11.1", default-features = false }
alloy-signer-aws = { version = "0.11.1", default-features = false }
alloy-signer-gcp = { version = "0.11.1", default-features = false }
alloy-signer-ledger = { version = "0.11.1", default-features = false }
alloy-signer-local = { version = "0.11.1", default-features = false }
alloy-signer-trezor = { version = "0.11.1", default-features = false }
alloy-transport = { version = "0.11.1", default-features = false }
alloy-transport-http = { version = "0.11.1", default-features = false }
alloy-transport-ipc = { version = "0.11.1", default-features = false }
alloy-transport-ws = { version = "0.11.1", default-features = false }
alloy-node-bindings = { version = "0.11.1", default-features = false }
alloy-network-primitives = { version = "0.11.1", default-features = false }

## alloy-core
alloy-dyn-abi = "0.8.18"
alloy-json-abi = "0.8.18"
alloy-primitives = { version = "0.8.18", features = [
    "getrandom",
    "rand",
    "map-fxhash",
    "map-foldhash",
] }
alloy-sol-macro-expander = "0.8.18"
alloy-sol-macro-input = "0.8.18"
alloy-sol-types = "0.8.18"
syn-solidity = "0.8.18"

alloy-chains = "0.1"
alloy-rlp = "0.3"
alloy-trie = "0.7.0"

## op-alloy
op-alloy-consensus = "0.10.0"
op-alloy-rpc-types = "0.10.0"

